# audrey

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: sine.rs
samples/: sine_440hz_stereo.caf  sine_440hz_stereo.flac
src/: caf_alac.rs  lib.rs  read.rs
tests/: read.rs
