[package]
name = "audrey"
version = "0.2.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
keywords = ["audio", "format", "decode", "encode", "convert"]
description = "A crate to simplify reading, writing and converting between a range of audio formats."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustAudio/audrey.git"
homepage = "https://github.com/RustAudio/audrey"
documentation = "https://docs.rs/audrey"
categories = ["multimedia::audio"]
edition = "2018"

[dependencies]
claxon = { optional = true, version = "0.4" }
hound = { optional = true, version = "3" }
lewton = { optional = true, version = "0.9" }
caf = { optional = true, version = "0.1" }
alac = { optional = true, version = "0.5" }
sample = "0.10"

[dev-dependencies]
cpal = "0.10"

[features]
default = ["flac", "ogg_vorbis", "wav", "caf_alac"]
flac = ["claxon"]
ogg_vorbis = ["lewton"]
wav = ["hound"]
caf_alac = ["alac", "caf"]
